Fixed grid overflow error

--- a/src/components/main.css
+++ b/src/components/main.css
@@ -511,7 +511,7 @@ h6 {
   font-weight: normal;
   font-size: 16px;
   line-height: 1.6;
-  padding: 24px 0 0 0;
+  padding: 32px 0 0 0;
   text-align: left;
 }
 
@@ -560,7 +560,7 @@ h6 {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 48px;
+  padding: 48px 24px;
 }
 
 /*********** Contact Page ***************/
